--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "typewriter-effect": "^2.18.2",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
