#10: Deploy in github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://ngmnhdc/github.io/my-portfolio/",
+    "homepage": "https://ngmnhdc.github.io/my-portfolio/",
     "name": "porfolio",
     "version": "0.1.0",
     "private": true,
